--- a/test/dune
+++ b/test/dune
@@ -2,4 +2,4 @@
  (name test_parse)
  (modules test_parse)
  (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
- (libraries Clarity alcotest))
+ (libraries alcotest clarity))
