--- a/clarity-lang.opam
+++ b/clarity-lang.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/weavery/clarity.ml/issues"
 depends: [
   "dune" {>= "2.7"}
   "alcotest" {with-test}
+  "cppo" {build}
   "menhir" {>= "20200624"}
   "num" {>= "1.3"}
   "odoc" {with-doc}
